crates/oopsie/tests/snapshots/report__report_colored_stripped_unstable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
[38;2;243;139;168;1mError[0m[38;2;108;112;134m[[0m[38;2;137;180;250mreport::TestError[0m[38;2;108;112;134m][0m: Test error: colored test

[38;2;203;166;247m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[0m
[38;2;148;226;213m   ... 9 frames hidden ...[0m
[38;2;127;132;156m  1[0m[38;2;108;112;134m: [0m[38;2;243;139;168mreport[[HASH]]::test_report_colored[0m
           [38;2;108;112;134mat [0m[38;2;203;166;247mtests/report.rs[0m[38;2;250;179;135m:82[0m[38;2;250;179;135m:6[0m
[38;2;127;132;156m  2[0m[38;2;108;112;134m: [0m[38;2;243;139;168mreport[[HASH]]::test_report_colored::{closure#0}[0m
           [38;2;108;112;134mat [0m[38;2;203;166;247mtests/report.rs[0m[38;2;250;179;135m:77[0m[38;2;250;179;135m:25[0m
[38;2;148;226;213m   ... 22 frames hidden ...[0m
