crates/oopsie/tests/snapshots/report__report_welp_message_free_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error: connection reset by peer
  at crates/oopsie/tests/report.rs:[LOC]
  ╰─▶ connection reset by peer

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... no spans captured ...
