crates/oopsie/tests/snapshots/report__report_with_help_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report.to_string()
---
Error[report::ErrorWithHelp]: Something went wrong: connection refused
  at crates/oopsie/tests/report.rs:[LOC]

  help: Try restarting the service

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: report::error_with_help_oopsies::ErrorWithHelp<__T0>::build::h[HASH]
           at tests/report.rs:[LOC]
  2: report::test_report_with_help::h[HASH]
           at tests/report.rs:[LOC]
  3: report::test_report_with_help::{{closure}}::h[HASH]
           at tests/report.rs:[LOC]
   ... 22 frames hidden ...
