crates/oopsie/tests/snapshots/report__report_with_help_unstable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report.to_string()
---
Error[report::ErrorWithHelp]: Something went wrong: connection refused

  help: Try restarting the service

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: <report[[HASH]]::error_with_help_oopsies::ErrorWithHelp<&str>>::build
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  2: report[[HASH]]::test_report_with_help
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  3: report[[HASH]]::test_report_with_help::{closure#0}
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
   ... 22 frames hidden ...
