crates/oopsie/tests/snapshots/report__report_with_spantrace_debug_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: "format!(\"{error:#}\")"
---
Inner error happened
