crates/oopsie/tests/snapshots/report__report_with_spantrace_serde_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::common::MyError::Inner]: Inner error happened
  at crates/oopsie/tests/common/mod.rs:[LOC]
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  1: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]
  2: controller::outer_function
           with {"foo":true,"name":"Alice"}
           at crates/oopsie/tests/common/mod.rs:[LOC]

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 10 frames hidden ...
  1: report[[HASH]]::common::make_error::inner_function
           at tests/common/mod.rs:[LOC]
  2: report[[HASH]]::common::make_error::outer_function
           at tests/common/mod.rs:[LOC]
  3: report[[HASH]]::common::make_error
           at tests/common/mod.rs:[LOC]
  4: report[[HASH]]::test_report_with_spantrace_serde
           at tests/report.rs:[LOC]
  5: report[[HASH]]::test_report_with_spantrace_serde::{closure#0}
           at tests/report.rs:[LOC]
   ... 22 frames hidden ...
